--- a/index.html
+++ b/index.html
@@ -30,7 +30,21 @@
             <img src="hero section bg 4.png" alt="bg 2" class="bg-4 hidden">
         </div>
     </section>
-
+    <section id="what-we-are">
+        <h2 class="section-title">¿Qué somos?</h2>
+        <p class="section-content">Somos una incubadora de proyectos tecnológicos que ayuda a los jóvenes a <b class="purple">hacer sus ideas realidad.</b></p>
+    </section>
+    <figure class="first-separator">
+        <div class="separator-line"></div>
+        <img src="blue hexagon.png" alt="Hexágono" class="first-hexagon">
+        <div class="separator-line"></div>
+    </figure>
+    <section id="purpose">
+        <h2 class="section-title">Nuestro propósito</h2>
+        <p class="section-content">Turingbox surgió con la idea de motivar a <b class="blue">más personas</b> a incursionar en el mundo de la <b class="blue">tecnología.</b></p>
+        <p class="blue section-content separate">Somos el lugar para <b>explorar</b> tus <b>intereses</b></p>
+    </section>
+    
     <script src="script.js" type="module"></script>
 </body>
 </html>
