--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 <body>
     <header>
         <img src="TB_Símbolo Blanco.png" alt="Logo TuringBox" class="header-logo">
+        <img src="TB_Identificador blanco.png" alt="Logo TuringBox" class="header-logo-desktop">
         <img src="menu.png" alt="Menu" class="header-menu">
+        <div class="header-links">
+            <a href="#">Proyectos</a>
+            <a href="#">Eventos</a>
+            <a href="#">Nosotros</a>
+        </div>
     </header>
     <section id="hero-section">
         <div class="main-content">
@@ -37,7 +43,8 @@
     <figure class="first-separator">
         <div class="separator-line"></div>
         <img src="blue hexagon.png" alt="Hexágono" class="first-hexagon">
-        <div class="separator-line"></div>
+        <img src="purple hexagon.png" alt="Hexágono" class="first-hexagon-desktop">
+        <div class="separator-line second-line"></div>
     </figure>
     <section id="purpose">
         <h2 class="section-title">Nuestro propósito</h2>
