--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <h2 class="section-title">Nuestro propósito</h2>
         <p class="section-content">Turingbox surgió con la idea de motivar a <b class="blue">más personas</b> a incursionar en el mundo de la <b class="blue">tecnología.</b></p>
         <p class="blue section-content separate">Somos el lugar para <b>explorar</b> tus <b>intereses</b></p>
+        <div class="interests"></div>
     </section>
     
     <script src="script.js" type="module"></script>
