--- a/index.html
+++ b/index.html
@@ -52,6 +52,26 @@
         <p class="blue section-content separate">Somos el lugar para <b>explorar</b> tus <b>intereses</b></p>
         <div class="interests"></div>
     </section>
+    <figure class="second-separator">
+        <img src="div top desktop.png" alt="Separador 1" class="second-separator-top desktop">
+        <img src="div bottom desktop.png" alt="Separador 1" class="second-separator-bottom desktop">
+        <img src="div top.png" alt="Separador 1" class="second-separator-top mobile">
+        <img src="div bottom.png" alt="Separador 1" class="second-separator-bottom mobile">
+    </figure>
+    <section id="how">
+        <h2 class="section-title">¿Cómo lo hacemos?</h2>
+        <div class="carousel">
+            <p class="section-content purple carousel-title">Acercamos a las personas a la tecnología</p>
+            <p class="section-content carousel-content gray">Por medio de charlas y eventos sobre el mundo de la tecnología y el crecimiento empresarial, donde cada invitado es seleccionado para fomentar el aprendizaje de los asistentes</p>
+        </div>
+        <div class="carousel-controls">
+            <img src="arrow.png" alt="" class="left-arrow">
+            <div class="kirby"></div>
+            <div class="kirby"></div>
+            <div class="kirby"></div>
+            <img src="arrow.png" alt="" class="right-arrow">
+        </div>
+    </section>
     
     <script src="script.js" type="module"></script>
 </body>
