--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </section>
     <figure class="first-separator">
         <div class="separator-line"></div>
-        <img src="blue hexagon.png" alt="Hexágono" class="first-hexagon">
+        <img src="blue hexagon normal.png" alt="Hexágono" class="first-hexagon">
         <img src="purple hexagon.png" alt="Hexágono" class="first-hexagon-desktop">
         <div class="separator-line second-line"></div>
     </figure>
@@ -66,9 +66,9 @@
         </div>
         <div class="carousel-controls">
             <img src="arrow.png" alt="" class="left-arrow">
-            <div class="kirby"></div>
-            <div class="kirby"></div>
-            <div class="kirby"></div>
+            <img src="filled purple hexagon.png" alt="Opcion 1" class="carousel-hexagon" data-color = "purple">
+            <img src="empty blue hexagon.png" alt="Opcion 2" class="carousel-hexagon" data-color = "blue">
+            <img src="empty pink hexagon.png" alt="Opcion 3" class="carousel-hexagon" data-color = "pink">
             <img src="arrow.png" alt="" class="right-arrow">
         </div>
     </section>
