--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
             <img src="arrow.png" alt="" class="right-arrow">
         </div>
     </section>
+    <figure class="second-separator mobile">
+        <img src="div top desktop.png" alt="Separador 1" class="second-separator-top desktop">
+        <img src="div bottom desktop.png" alt="Separador 1" class="second-separator-bottom desktop">
+        <img src="div top.png" alt="Separador 1" class="second-separator-top mobile">
+        <img src="div bottom.png" alt="Separador 1" class="second-separator-bottom mobile">
+    </figure>
+    <footer></footer>
     
     <script src="script.js" type="module"></script>
 </body>
