--- a/index.html
+++ b/index.html
@@ -78,7 +78,18 @@
         <img src="div top.png" alt="Separador 1" class="second-separator-top mobile">
         <img src="div bottom.png" alt="Separador 1" class="second-separator-bottom mobile">
     </figure>
-    <footer></footer>
+    <footer>
+        <h2 class="section-title">¿Qué esperas para hacer parte?</h2>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="footer-cta">Únete ahora</a>
+        <div class="social-networks">
+            <img src="linkedin.png" alt="linkedin">
+            <img src="youtube.png" alt="youtube">
+            <img src="instagram.png" alt="Instagram">
+            <img src="whatsapp.png" alt="whatsapp">
+            <img src="tik-tok.png" alt="tik-tok">
+            <img src="twitter.png" alt="twitter">
+        </div>
+    </footer>
     
     <script src="script.js" type="module"></script>
 </body>
