--- a/index.html
+++ b/index.html
@@ -61,16 +61,18 @@
     </figure>
     <section id="how">
         <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">¿Cómo lo hacemos?</h2>
-        <div class="carousel" data-aos="fade-up" data-aos-duration="1000">
-            <p class="section-content purple carousel-title">Acercamos a las personas a la tecnología</p>
-            <p class="section-content carousel-content gray">Por medio de charlas y eventos sobre el mundo de la tecnología y el crecimiento empresarial, donde cada invitado es seleccionado para fomentar el aprendizaje de los asistentes</p>
-        </div>
-        <div class="carousel-controls" data-aos="fade-up" data-aos-duration="1000">
-            <img src="arrow.png" alt="" class="left-arrow">
-            <img src="filled purple hexagon.png" alt="Opcion 1" class="carousel-hexagon" data-color = "purple">
-            <img src="empty blue hexagon.png" alt="Opcion 2" class="carousel-hexagon" data-color = "blue">
-            <img src="empty pink hexagon.png" alt="Opcion 3" class="carousel-hexagon" data-color = "pink">
-            <img src="arrow.png" alt="" class="right-arrow">
+        <div class="complete-carousel" data-aos="fade-up" data-aos-duration="1000">
+            <div class="carousel">
+                <p class="section-content purple carousel-title">Acercamos a las personas a la tecnología</p>
+                <p class="section-content carousel-content gray">Por medio de charlas y eventos sobre el mundo de la tecnología y el crecimiento empresarial, donde cada invitado es seleccionado para fomentar el aprendizaje de los asistentes</p>
+            </div>
+            <div class="carousel-controls">
+                <img src="arrow.png" alt="" class="left-arrow">
+                <img src="filled purple hexagon.png" alt="Opcion 1" class="carousel-hexagon" data-color = "purple">
+                <img src="empty blue hexagon.png" alt="Opcion 2" class="carousel-hexagon" data-color = "blue">
+                <img src="empty pink hexagon.png" alt="Opcion 3" class="carousel-hexagon" data-color = "pink">
+                <img src="arrow.png" alt="" class="right-arrow">
+            </div>
         </div>
     </section>
     <figure class="second-separator mobile">
