--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TuringBox - Un semillero de estudiantes para estudiantes</title>
-    <link rel="shortcut icon" href="TB_Símbolo.png">
+    <link rel="shortcut icon" href="assets/TB_Símbolo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"> 
@@ -13,15 +13,16 @@
 </head>
 <body>
     <header>
-        <img src="TB_Símbolo Blanco.png" alt="Logo TuringBox" class="header-logo">
-        <img src="TB_Identificador blanco.png" alt="Logo TuringBox" class="header-logo-desktop">
-        <img src="menu.png" alt="Menu" class="header-menu">
+        <img src="assets/TB_Símbolo Blanco.png" alt="Logo TuringBox" class="header-logo">
+        <img src="assets/TB_Identificador blanco.png" alt="Logo TuringBox" class="header-logo-desktop">
+        <img src="assets/menu.png" alt="Menu" class="header-menu">
         <div class="header-links">
             <a href="#">Proyectos</a>
             <a href="#">Eventos</a>
             <a href="#">Nosotros</a>
         </div>
     </header>
+    <div id="menu"></div>
     <section id="hero-section">
         <div class="main-content">
             <h1 data-aos="fade-up" data-aos-duration="1000">TuringBox</h1>
@@ -31,10 +32,10 @@
             </div>
         </div>
         <div class="bg-images" data-aos="fade-up" data-aos-duration="1000">
-            <img src="hero section bg 1.png" alt="bg 1" class="bg-1">
-            <img src="hero section bg 2.png" alt="bg 2" class="bg-2">
-            <img src="hero section bg 3.png" alt="bg 2" class="bg-3 hidden">
-            <img src="hero section bg 4.png" alt="bg 2" class="bg-4 hidden">
+            <img src="assets/hero section bg 1.png" alt="bg 1" class="bg-1">
+            <img src="assets/hero section bg 2.png" alt="bg 2" class="bg-2">
+            <img src="assets/hero section bg 3.png" alt="bg 2" class="bg-3 hidden">
+            <img src="assets/hero section bg 4.png" alt="bg 2" class="bg-4 hidden">
         </div>
     </section>
     <section id="what-we-are">
@@ -43,8 +44,8 @@
     </section>
     <figure class="first-separator" data-aos="fade-right" data-aos-duration="1000">
         <div class="separator-line"></div>
-        <img src="blue hexagon normal.png" alt="Hexágono" class="first-hexagon">
-        <img src="purple hexagon.png" alt="Hexágono" class="first-hexagon-desktop">
+        <img src="assets/blue hexagon normal.png" alt="Hexágono" class="first-hexagon">
+        <img src="assets/purple hexagon.png" alt="Hexágono" class="first-hexagon-desktop">
         <div class="separator-line second-line"></div>
     </figure>
     <section id="purpose">
@@ -54,10 +55,10 @@
         <div class="interests"></div>
     </section>
     <figure class="second-separator">
-        <img src="div top desktop.png" alt="Separador 1" class="second-separator-top desktop">
-        <img src="div bottom desktop.png" alt="Separador 1" class="second-separator-bottom desktop">
-        <img src="div top.png" alt="Separador 1" class="second-separator-top mobile">
-        <img src="div bottom.png" alt="Separador 1" class="second-separator-bottom mobile">
+        <img src="assets/div top desktop.png" alt="Separador 1" class="second-separator-top desktop">
+        <img src="assets/div bottom desktop.png" alt="Separador 1" class="second-separator-bottom desktop">
+        <img src="assets/div top.png" alt="Separador 1" class="second-separator-top mobile">
+        <img src="assets/div bottom.png" alt="Separador 1" class="second-separator-bottom mobile">
     </figure>
     <section id="how">
         <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">¿Cómo lo hacemos?</h2>
@@ -67,31 +68,31 @@
                 <p class="section-content carousel-content gray">Por medio de charlas y eventos sobre el mundo de la tecnología y el crecimiento empresarial, donde cada invitado es seleccionado para fomentar el aprendizaje de los asistentes</p>
             </div>
             <div class="carousel-controls">
-                <img src="arrow.png" alt="" class="left-arrow">
-                <img src="filled purple hexagon.png" alt="Opcion 1" class="carousel-hexagon" data-color = "purple">
-                <img src="empty blue hexagon.png" alt="Opcion 2" class="carousel-hexagon" data-color = "blue">
-                <img src="empty pink hexagon.png" alt="Opcion 3" class="carousel-hexagon" data-color = "pink">
-                <img src="arrow.png" alt="" class="right-arrow">
+                <img src="assets/arrow.png" alt="" class="left-arrow">
+                <img src="assets/filled purple hexagon.png" alt="Opcion 1" class="carousel-hexagon" data-color = "purple">
+                <img src="assets/empty blue hexagon.png" alt="Opcion 2" class="carousel-hexagon" data-color = "blue">
+                <img src="assets/empty pink hexagon.png" alt="Opcion 3" class="carousel-hexagon" data-color = "pink">
+                <img src="assets/arrow.png" alt="" class="right-arrow">
             </div>
         </div>
     </section>
     <figure class="second-separator mobile">
-        <img src="div top desktop.png" alt="Separador 1" class="second-separator-top desktop">
-        <img src="div bottom desktop.png" alt="Separador 1" class="second-separator-bottom desktop">
-        <img src="div top.png" alt="Separador 1" class="second-separator-top mobile">
-        <img src="div bottom.png" alt="Separador 1" class="second-separator-bottom mobile">
+        <img src="assets/div top desktop.png" alt="Separador 1" class="second-separator-top desktop">
+        <img src="assets/div bottom desktop.png" alt="Separador 1" class="second-separator-bottom desktop">
+        <img src="assets/div top.png" alt="Separador 1" class="second-separator-top mobile">
+        <img src="assets/div bottom.png" alt="Separador 1" class="second-separator-bottom mobile">
     </figure>
     <footer>
         <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">¿Qué esperas para hacer parte?</h2>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="footer-cta">Únete ahora</a>
         <div class="social-networks">
             
-                <img src="linkedin.png" alt="linkedin">
-                <img src="youtube.png" alt="youtube">
-                <img src="instagram.png" alt="Instagram">
-                <img src="whatsapp.png" alt="whatsapp">
-                <img src="tik-tok.png" alt="tik-tok">
-                <img src="twitter.png" alt="twitter">
+                <img src="assets/linkedin.png" alt="linkedin">
+                <img src="assets/youtube.png" alt="youtube">
+                <img src="assets/instagram.png" alt="Instagram">
+                <img src="assets/whatsapp.png" alt="whatsapp">
+                <img src="assets/tik-tok.png" alt="tik-tok">
+                <img src="assets/twitter.png" alt="twitter">
             
         </div>
     </footer>
