--- a/index.html
+++ b/index.html
@@ -22,7 +22,21 @@
             <a href="#">Nosotros</a>
         </div>
     </header>
-    <div id="menu"></div>
+    <div id="menu" class="mobile none">
+        <div class="menu-header">
+            <div class="empty"></div>
+            <img src="assets/close.png" alt="close menu" class="close-menu">
+        </div>
+        <div class="menu-options">
+            <a href="#" class="top-separate">Proyectos</a>
+            <div class="menu-line"></div>
+            <a href="#">Colaboraciones</a>
+            <div class="menu-line"></div>
+            <a href="#">Nosotros</a>
+            <div class="menu-line"></div>
+            <img src="assets/div bottom.png" alt="Hexagonos" class="menu-bg">
+        </div>
+    </div>
     <section id="hero-section">
         <div class="main-content">
             <h1 data-aos="fade-up" data-aos-duration="1000">TuringBox</h1>
