--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="menu-line"></div>
             <a href="#">Nosotros</a>
             <div class="menu-line"></div>
-            <img src="assets/div bottom.png" alt="Hexagonos" class="menu-bg">
+            <img src="assets/hero section bg 2.png" alt="Hexagonos" class="menu-bg">
         </div>
     </div>
     <section id="hero-section">
