--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="footer-cta">Únete ahora</a>
         <div class="social-networks">
             
-                <img src="assets/linkedin.png" alt="linkedin">
-                <img src="assets/youtube.png" alt="youtube">
-                <img src="assets/instagram.png" alt="Instagram">
-                <img src="assets/whatsapp.png" alt="whatsapp">
-                <img src="assets/tik-tok.png" alt="tik-tok">
-                <img src="assets/twitter.png" alt="twitter">
+                <img src="assets/linkedin.png" alt="linkedin" onclick="window.open('https://www.linkedin.com/company/turingbox/')">
+                <img src="assets/youtube.png" alt="youtube" onclick="window.open('https://www.youtube.com/@turingbox')">
+                <img src="assets/instagram.png" alt="Instagram" onclick="window.open('https://www.instagram.com/turingbox/')">
+                <img src="assets/whatsapp.png" alt="whatsapp" onclick="window.open('https://chat.whatsapp.com/D9wyiwh2jz2FDD6NkeopCS')">
+                <img src="assets/tik-tok.png" alt="tik-tok" onclick="window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ')">
+                <img src="assets/twitter.png" alt="twitter" onclick="window.open('https://twitter.com/turingbox_')">
             
         </div>
     </footer>
