--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
     </section>
     <figure class="first-separator" data-aos="fade-right" data-aos-duration="1000">
         <div class="separator-line"></div>
-        <img src="assets/blue hexagon normal.png" alt="Hexágono" class="first-hexagon">
+        <img src="assets/purple hexagon normal.png" alt="Hexágono" class="first-hexagon">
         <img src="assets/purple hexagon.png" alt="Hexágono" class="first-hexagon-desktop">
         <div class="separator-line second-line"></div>
     </figure>
     <section id="purpose">
         <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">Nuestro propósito</h2>
-        <p class="section-content" data-aos="fade-up" data-aos-duration="1000">Turingbox surgió con la idea de motivar a <b class="blue">más personas</b> a incursionar en el mundo de la <b class="blue">tecnología.</b></p>
-        <p class="blue section-content separate" data-aos="fade-up" data-aos-duration="1000">Somos el lugar para <b>explorar</b> tus <b>intereses</b></p>
+        <p class="section-content" data-aos="fade-up" data-aos-duration="1000">Turingbox surgió con la idea de motivar a <b class="purple">más personas</b> a incursionar en el mundo de la <b class="purple">tecnología.</b></p>
+        <p class="purple section-content separate" data-aos="fade-up" data-aos-duration="1000">Somos el lugar para <b>explorar</b> tus <b>intereses</b></p>
         <div class="interests"></div>
     </section>
     <figure class="second-separator">
@@ -83,9 +83,9 @@
             </div>
             <div class="carousel-controls">
                 <img src="assets/arrow.png" alt="" class="left-arrow">
-                <img src="assets/filled purple hexagon.png" alt="Opcion 1" class="carousel-hexagon" data-color = "purple">
-                <img src="assets/empty blue hexagon.png" alt="Opcion 2" class="carousel-hexagon" data-color = "blue">
-                <img src="assets/empty pink hexagon.png" alt="Opcion 3" class="carousel-hexagon" data-color = "pink">
+                <img src="assets/filled purple hexagon.png" alt="Opcion 1" class="carousel-hexagon purple-pointer" data-color = "purple">
+                <img src="assets/empty blue hexagon.png" alt="Opcion 2" class="carousel-hexagon blue-pointer" data-color = "blue">
+                <img src="assets/empty pink hexagon.png" alt="Opcion 3" class="carousel-hexagon pink-pointer" data-color = "pink">
                 <img src="assets/arrow.png" alt="" class="right-arrow">
             </div>
         </div>
