--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <div class="menu-line"></div>
             <a href="#">Colaboraciones</a>
             <div class="menu-line"></div>
-            <a href="#">Nosotros</a>
+            <a href="https://turing-core-team.github.io/web-page-new/about">Nosotros</a>
             <div class="menu-line"></div>
             <img src="assets/hero section bg 2.png" alt="Hexagonos" class="menu-bg">
         </div>
