--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TuringBox - Un semillero de estudiantes para estudiantes</title>
-    <link rel="shortcut icon" href="assets/TB_Símbolo.png"> 
+    <link rel="shortcut icon" href="assets/TB_Símbolo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"> 
@@ -32,7 +32,7 @@
             <div class="menu-line"></div>
             <a href="#">Colaboraciones</a>
             <div class="menu-line"></div>
-            <a href="#">Nosotros</a>
+            <a href="https://turing-core-team.github.io/web-page-new/about">Nosotros</a>
             <div class="menu-line"></div>
             <img src="assets/hero section bg 2.png" alt="Hexagonos" class="menu-bg">
         </div>
