--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <section id="hero-section">
+    <section id="hero-section" class="pink-gradient">
         <div class="main-content">
             <h2 data-aos="fade-up" data-aos-duration="1000">Queremos inspirar a más personas a crear soluciones</h2>
             <div class="mouse-scroll" data-aos="fade-up" data-aos-duration="1000">
@@ -56,7 +56,7 @@
 
     <section id="what-we-are">
         <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">¿Por qué existimos?</h2>
-        <p class="section-content" data-aos="fade-up" data-aos-duration="1000">El nacimiento de Turingbox se da como <b class="pink">respuesta a la falta de flexibilidad en las universidades</b>, en general, para integrar en sus currículos la <b class="pink">enseñanza de nuevas tecnologías</b></p>
+        <p class="section-content more-space" data-aos="fade-up" data-aos-duration="1000">El nacimiento de Turingbox se da como <b class="pink">respuesta a la falta de flexibilidad en las universidades</b>, en general, para integrar en sus currículos la <b class="pink">enseñanza de nuevas tecnologías</b></p>
     </section>
 
     <figure class="second-separator">
@@ -68,7 +68,40 @@
 
     <section id="history">
         <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">Nuestra historia</h2>
-        <div class="timeline"></div>
+        <div class="timeline">
+            <div class="year mobile left" data-aos="fade-right" data-aos-duration="1000">
+                <div class="separator-line-year"></div>
+                <div class="year-hexagon">
+                    <h3>2021</h3>
+                </div>
+            </div>
+            <div class="year-element year-right" data-aos="fade-up" data-aos-duration="1000">
+                <img src="assets/logo_google.png" alt="Logo Google">
+                <p class="year-element-date">Junio</p>
+                <p class="year-element-content">Turingbox se convierte en un Google Student Developer Club</p>
+            </div>
+            <div class="year-element year-left" data-aos="fade-up" data-aos-duration="1000">
+                <img src="assets/switzerland.png" alt="Logo Google">
+                <p class="year-element-date">Octubre</p>
+                <p class="year-element-content">Somos impulsados a través del programa Start Fellowship</p>
+            </div>
+            <div class="year mobile right" data-aos="fade-left" data-aos-duration="1000">
+                <div class="year-hexagon">
+                    <h3>2022</h3>
+                </div>
+                <div class="separator-line-year"></div>
+            </div>
+            <div class="year-element year-right" data-aos="fade-up" data-aos-duration="1000">
+                <img src="assets/logo_unal.png" alt="Logo Google">
+                <p class="year-element-date">Marzo</p>
+                <p class="year-element-content">Fundamos un grupo estudiantil en la UNAL</p>
+            </div>
+            <div class="year-element year-left" data-aos="fade-up" data-aos-duration="1000">
+                <img src="assets/TB_Símbolo.png" alt="Logo Google">
+                <p class="year-element-date">Septiembre</p>
+                <p class="year-element-content">Nos convertimos en un semillero</p>
+            </div>
+        </div>
     </section>
 
 
