--- a/about.html
+++ b/about.html
@@ -61,8 +61,10 @@
 
     <figure class="second-separator">
         <img src="assets/div top desktop.png" alt="Separador 1" class="second-separator-top desktop">
+        <img src="assets/div bottom desktop.png" alt="Separador 1" class="second-separator-bottom hidden desktop">
         <img src="assets/div bottom desktop.png" alt="Separador 1" class="second-separator-bottom desktop">
         <img src="assets/div top.png" alt="Separador 1" class="second-separator-top mobile">
+        <img src="assets/div top.png" alt="Separador 1" class="second-separator-top mobile hidden">
         <img src="assets/div bottom.png" alt="Separador 1" class="second-separator-bottom mobile">
     </figure>
 
