--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
     </section>
     <figure class="second-separator">
         <img src="assets/div top desktop.png" alt="Separador 1" class="second-separator-top desktop">
+        <img src="assets/div top desktop.png" alt="Separador 1" class="second-separator-top desktop hidden">
         <img src="assets/div bottom desktop.png" alt="Separador 1" class="second-separator-bottom desktop">
         <img src="assets/div top.png" alt="Separador 1" class="second-separator-top mobile">
         <img src="assets/div bottom.png" alt="Separador 1" class="second-separator-bottom mobile">
+        <img src="assets/div bottom.png" alt="Separador 1" class="second-separator-bottom mobile hidden">
     </figure>
     <section id="how">
         <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">¿Cómo lo hacemos?</h2>
