--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <header>
-        <img src="assets/TB_Símbolo Blanco.png" alt="Logo TuringBox" class="header-logo" onclick="window.open('https://turing-core-team.github.io/web-page-new/')">
-        <img src="assets/TB_Identificador blanco.png" alt="Logo TuringBox" class="header-logo-desktop" onclick="window.open('https://turing-core-team.github.io/web-page-new/')">
+        <img src="assets/TB_Símbolo Blanco.png" alt="Logo TuringBox" class="header-logo" onclick="location.replace('https://turingbox.co')">
+        <img src="assets/TB_Identificador blanco.png" alt="Logo TuringBox" class="header-logo-desktop" onclick="location.replace('https://turingbox.co')">
         <img src="assets/menu.png" alt="Menu" class="header-menu">
         <div class="header-links">
             <a href="#">Proyectos</a>
