--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <div class="header-links">
             <a href="#">Proyectos</a>
             <a href="#">Eventos</a>
-            <a href="https://turing-core-team.github.io/web-page-new/about">Nosotros</a>
+            <a href="https://turing-core-team.github.io/web-page-new/about" style="text-decoration: underline;">Nosotros</a>
         </div>
     </header>
     <div id="menu" class="mobile none">
@@ -71,37 +71,41 @@
     <section id="history">
         <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">Nuestra historia</h2>
         <div class="timeline">
-            <div class="year mobile left" data-aos="fade-right" data-aos-duration="1000">
+            <div class="year left" data-aos="fade-right" data-aos-duration="1000">
                 <div class="separator-line-year"></div>
                 <div class="year-hexagon">
                     <h3>2021</h3>
                 </div>
             </div>
-            <div class="year-element year-right" data-aos="fade-up" data-aos-duration="1000">
-                <img src="assets/logo_google.png" alt="Logo Google">
-                <p class="year-element-date">Junio</p>
-                <p class="year-element-content">Turingbox se convierte en un Google Student Developer Club</p>
+            <div class="align-content">
+                <div class="year-element year-right" data-aos="fade-up" data-aos-duration="1000">
+                    <img src="assets/logo_google.png" alt="Logo Google">
+                    <p class="year-element-date">Junio</p>
+                    <p class="year-element-content">Turingbox se convierte en un Google Student Developer Club</p>
+                </div>
+                <div class="year-element year-left" data-aos="fade-up" data-aos-duration="1000">
+                    <img src="assets/switzerland.png" alt="Logo Google">
+                    <p class="year-element-date">Octubre</p>
+                    <p class="year-element-content">Somos impulsados a través del programa Start Fellowship</p>
+                </div>
             </div>
-            <div class="year-element year-left" data-aos="fade-up" data-aos-duration="1000">
-                <img src="assets/switzerland.png" alt="Logo Google">
-                <p class="year-element-date">Octubre</p>
-                <p class="year-element-content">Somos impulsados a través del programa Start Fellowship</p>
-            </div>
-            <div class="year mobile right" data-aos="fade-left" data-aos-duration="1000">
+            <div class="year right" data-aos="fade-left" data-aos-duration="1000">
                 <div class="year-hexagon">
                     <h3>2022</h3>
                 </div>
                 <div class="separator-line-year"></div>
             </div>
-            <div class="year-element year-right" data-aos="fade-up" data-aos-duration="1000">
-                <img src="assets/logo_unal.png" alt="Logo Google">
-                <p class="year-element-date">Marzo</p>
-                <p class="year-element-content">Fundamos un grupo estudiantil en la UNAL</p>
-            </div>
-            <div class="year-element year-left" data-aos="fade-up" data-aos-duration="1000">
-                <img src="assets/TB_Símbolo.png" alt="Logo Google">
-                <p class="year-element-date">Septiembre</p>
-                <p class="year-element-content">Nos convertimos en un semillero</p>
+            <div class="align-content">
+                <div class="year-element year-right" data-aos="fade-up" data-aos-duration="1000">
+                    <img src="assets/logo_unal.png" alt="Logo Google">
+                    <p class="year-element-date">Marzo</p>
+                    <p class="year-element-content">Fundamos un grupo estudiantil en la UNAL</p>
+                </div>
+                <div class="year-element year-left" data-aos="fade-up" data-aos-duration="1000">
+                    <img src="assets/TB_Símbolo.png" alt="Logo Google">
+                    <p class="year-element-date">Septiembre</p>
+                    <p class="year-element-content">Nos convertimos en un semillero</p>
+                </div>
             </div>
         </div>
     </section>
@@ -109,7 +113,7 @@
 
     <footer>
         <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">¿Qué esperas para hacer parte de esta historia?</h2>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="footer-cta">Únete ahora</a>
+        <a href="https://forms.gle/aTsjyo1CLjm6Kbao6" class="footer-cta">Únete ahora</a>
         <div class="social-networks">
             
                 <img src="assets/linkedin.png" alt="linkedin" onclick="window.open('https://www.linkedin.com/company/turingbox/')">
