--- a/about.html
+++ b/about.html
@@ -7,20 +7,20 @@
     <link rel="shortcut icon" href="assets/TB_Símbolo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
 </head>
 <body>
     <header>
-        <img src="assets/TB_Símbolo Blanco.png" alt="Logo TuringBox" class="header-logo" onclick="window.open('https://turing-core-team.github.io/web-page-new/')">
-        <img src="assets/TB_Identificador blanco.png" alt="Logo TuringBox" class="header-logo-desktop" onclick="window.open('https://turing-core-team.github.io/web-page-new/')">
+        <img src="assets/TB_Símbolo Blanco.png" alt="Logo TuringBox" class="header-logo" onclick="location.replace('https://turingbox.co')">
+        <img src="assets/TB_Identificador blanco.png" alt="Logo TuringBox" class="header-logo-desktop" onclick="location.replace('https://turingbox.co')">
         <img src="assets/menu.png" alt="Menu" class="header-menu">
         <div class="header-links">
-            <a href="#">Proyectos</a>
-            <a href="#">Eventos</a>
-            <a href="https://turing-core-team.github.io/web-page-new/about" style="text-decoration: underline;">Nosotros</a>
+            <a href="https://turingbox.co/projects.html">Proyectos</a>
+            <a href="https://turingbox.co/colaboraciones.html">Colaboraciones</a>
+            <a href="about.html" style="text-decoration: underline;">Nosotros</a>
         </div>
     </header>
     <div id="menu" class="mobile none">
@@ -61,10 +61,10 @@
 
     <figure class="second-separator">
         <img src="assets/div top desktop.png" alt="Separador 1" class="second-separator-top desktop">
-        <img src="assets/div bottom desktop.png" alt="Separador 1" class="second-separator-bottom hidden desktop">
+        <img src="assets/invisible separator.png" alt="Separador 1" class="second-separator-bottom hidden desktop">
         <img src="assets/div bottom desktop.png" alt="Separador 1" class="second-separator-bottom desktop">
         <img src="assets/div top.png" alt="Separador 1" class="second-separator-top mobile">
-        <img src="assets/div top.png" alt="Separador 1" class="second-separator-top mobile hidden">
+        <img src="assets/invisible separator.png" alt="Separador 1" class="second-separator-top mobile hidden">
         <img src="assets/div bottom.png" alt="Separador 1" class="second-separator-bottom mobile">
     </figure>
 
