--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <img src="assets/TB_Identificador blanco.png" alt="Logo TuringBox" class="header-logo-desktop" onclick="location.replace('https://turingbox.co')">
         <img src="assets/menu.png" alt="Menu" class="header-menu">
         <div class="header-links">
-            <a href="#">Proyectos</a>
-            <a href="#">Eventos</a>
-            <a href="https://turing-core-team.github.io/web-page-new/about">Nosotros</a>
+            <a href="https://turingbox.co/projects.html">Proyectos</a>
+            <a href="https://turingbox.co/colaboraciones.html">Colaboraciones</a>
+            <a href="about.html">Nosotros</a>
         </div>
     </header>
     <div id="menu" class="mobile none">
@@ -70,10 +70,10 @@
     </section>
     <figure class="second-separator">
         <img src="assets/div top desktop.png" alt="Separador 1" class="second-separator-top desktop">
-        <img src="assets/div top desktop.png" alt="Separador 1" class="second-separator-top desktop hidden">
+        <img src="assets/invisible separator.png" alt="Separador 1" class="second-separator-top desktop hidden">
         <img src="assets/div bottom desktop.png" alt="Separador 1" class="second-separator-bottom desktop">
         <img src="assets/div top.png" alt="Separador 1" class="second-separator-top mobile">
-        <img src="assets/div bottom.png" alt="Separador 1" class="second-separator-bottom mobile hidden">
+        <img src="assets/invisible separator.png" alt="Separador 1" class="second-separator-bottom mobile hidden">
         <img src="assets/div bottom.png" alt="Separador 1" class="second-separator-bottom mobile">
     </figure>
     <section id="how">
