--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <img src="assets/TB_Identificador blanco.png" alt="Logo TuringBox" class="header-logo-desktop" onclick="location.replace('https://turingbox.co')">
         <img src="assets/menu.png" alt="Menu" class="header-menu">
         <div class="header-links">
-            <a href="https://turingbox.co/projects.html">Proyectos</a>
+            <a href="projects.html">Proyectos</a>
             <a href="https://turingbox.co/colaboraciones.html">Colaboraciones</a>
             <a href="about.html" style="text-decoration: underline;">Nosotros</a>
         </div>
@@ -29,11 +29,11 @@
             <img src="assets/close.png" alt="close menu" class="close-menu">
         </div>
         <div class="menu-options">
-            <a href="#" class="top-separate">Proyectos</a>
+            <a href="projects.html" class="top-separate">Proyectos</a>
             <div class="menu-line"></div>
-            <a href="#">Colaboraciones</a>
+            <a href="colaboraciones.html">Colaboraciones</a>
             <div class="menu-line"></div>
-            <a href="https://turing-core-team.github.io/web-page-new/about">Nosotros</a>
+            <a href="about.html">Nosotros</a>
             <div class="menu-line"></div>
             <img src="assets/hero section bg 2.png" alt="Hexagonos" class="menu-bg">
         </div>
@@ -56,7 +56,7 @@
 
     <section id="what-we-are">
         <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">¿Por qué existimos?</h2>
-        <p class="section-content more-space" data-aos="fade-up" data-aos-duration="1000">El nacimiento de Turingbox se da como <b class="pink">respuesta a la falta de flexibilidad en las universidades</b>, en general, para integrar en sus currículos la <b class="pink">enseñanza de nuevas tecnologías</b></p>
+        <p class="section-content more-space" data-aos="fade-up" data-aos-duration="1000">Turingbox nace como <b class="pink">respuesta a la falta de flexibilidad en las universidades</b> para integrar en sus currículos la <b class="pink">enseñanza de nuevas tecnologías</b></p>
     </section>
 
     <figure class="second-separator">
@@ -71,7 +71,7 @@
     <section id="history">
         <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">Nuestra historia</h2>
         <div class="timeline">
-            <div class="year left" data-aos="fade-right" data-aos-duration="1000">
+            <div class="year left" data-aos="fade-up" data-aos-duration="1000">
                 <div class="separator-line-year"></div>
                 <div class="year-hexagon">
                     <h3>2021</h3>
@@ -81,15 +81,20 @@
                 <div class="year-element year-right" data-aos="fade-up" data-aos-duration="1000">
                     <img src="assets/logo_google.png" alt="Logo Google">
                     <p class="year-element-date">Junio</p>
-                    <p class="year-element-content">Turingbox se convierte en un Google Student Developer Club</p>
+                    <p class="year-element-content">Nacimos como el Google Developer Student Club. Somos el club más grande y activo Colombia</p>
                 </div>
                 <div class="year-element year-left" data-aos="fade-up" data-aos-duration="1000">
-                    <img src="assets/switzerland.png" alt="Logo Google">
+                    <img src="assets/logo_start_fellowship.png" alt="Logo Google">
                     <p class="year-element-date">Octubre</p>
-                    <p class="year-element-content">Somos impulsados a través del programa Start Fellowship</p>
+                    <p class="year-element-content">Somos impulsados a través del programa START Fellowship de la Universidad de St. Gallen en Suiza</p>
+                </div>
+                <div class="year-element year-right" data-aos="fade-up" data-aos-duration="1000">
+                    <img src="assets/Logo-Solidaridad-por-colombia.png" alt="Logo Google">
+                    <p class="year-element-date">Diciembre</p>
+                    <p class="year-element-content">Finalistas del programa ACCIONA de la Fundación Solidaridad por Colombia y la CCB</p>
                 </div>
             </div>
-            <div class="year right" data-aos="fade-left" data-aos-duration="1000">
+            <div class="year right" data-aos="fade-up" data-aos-duration="1000">
                 <div class="year-hexagon">
                     <h3>2022</h3>
                 </div>
@@ -99,12 +104,12 @@
                 <div class="year-element year-right" data-aos="fade-up" data-aos-duration="1000">
                     <img src="assets/logo_unal.png" alt="Logo Google">
                     <p class="year-element-date">Marzo</p>
-                    <p class="year-element-content">Fundamos un grupo estudiantil en la UNAL</p>
+                    <p class="year-element-content">Somos reconocidos como grupo estudiantil de la Universidad Nacional de Colombia</p>
                 </div>
                 <div class="year-element year-left" data-aos="fade-up" data-aos-duration="1000">
                     <img src="assets/TB_Símbolo.png" alt="Logo Google">
                     <p class="year-element-date">Septiembre</p>
-                    <p class="year-element-content">Nos convertimos en un semillero</p>
+                    <p class="year-element-content">Nos convertimos en un semillero de co-creación interinstitucional</p>
                 </div>
             </div>
         </div>
@@ -112,7 +117,7 @@
 
 
     <footer>
-        <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">¿Qué esperas para hacer parte de esta historia?</h2>
+        <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">¿Qué esperas para ser parte de esta historia?</h2>
         <a href="https://forms.gle/aTsjyo1CLjm6Kbao6" class="footer-cta">Únete ahora</a>
         <div class="social-networks">
             
@@ -122,7 +127,7 @@
                 <img src="assets/whatsapp.png" alt="whatsapp" onclick="window.open('https://chat.whatsapp.com/D9wyiwh2jz2FDD6NkeopCS')">
                 <img src="assets/tik-tok.png" alt="tik-tok" onclick="window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ')">
                 <img src="assets/twitter.png" alt="twitter" onclick="window.open('https://twitter.com/turingbox_')">
-            
+                <p class="uwunt">De Colombia con ❤ para el mundo</p>
         </div>
     </footer>
 
