--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TuringBox - Un semillero de estudiantes para estudiantes</title>
+    <title>TuringBox - El futuro es de quien lo construye</title>
     <link rel="shortcut icon" href="assets/TB_Símbolo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,8 +17,8 @@
         <img src="assets/TB_Identificador blanco.png" alt="Logo TuringBox" class="header-logo-desktop" onclick="location.replace('https://turingbox.co')">
         <img src="assets/menu.png" alt="Menu" class="header-menu">
         <div class="header-links">
-            <a href="https://turingbox.co/projects.html">Proyectos</a>
-            <a href="https://turingbox.co/colaboraciones.html">Colaboraciones</a>
+            <a href="projects.html">Proyectos</a>
+            <a href="colaboraciones.html">Colaboraciones</a>
             <a href="about.html">Nosotros</a>
         </div>
     </header>
@@ -28,11 +28,11 @@
             <img src="assets/close.png" alt="close menu" class="close-menu">
         </div>
         <div class="menu-options">
-            <a href="#" class="top-separate">Proyectos</a>
+            <a href="projects.html" class="top-separate">Proyectos</a>
             <div class="menu-line"></div>
-            <a href="#">Colaboraciones</a>
+            <a href="colaboraciones.html">Colaboraciones</a>
             <div class="menu-line"></div>
-            <a href="https://turing-core-team.github.io/web-page-new/about">Nosotros</a>
+            <a href="about.html">Nosotros</a>
             <div class="menu-line"></div>
             <img src="assets/hero section bg 2.png" alt="Hexagonos" class="menu-bg">
         </div>
@@ -40,7 +40,7 @@
     <section id="hero-section">
         <div class="main-content">
             <h1 data-aos="fade-up" data-aos-duration="1000">TuringBox</h1>
-            <h2 data-aos="fade-up" data-aos-duration="1000">Un semillero de estudiantes para estudiantes</h2>
+            <h2 data-aos="fade-up" data-aos-duration="1000">El futuro es de quien lo construye</h2>
             <div class="mouse-scroll" data-aos="fade-up" data-aos-duration="1000">
                 <div class="mouse-wheel"></div>
             </div>
@@ -53,8 +53,8 @@
         </div>
     </section>
     <section id="what-we-are">
-        <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">¿Qué somos?</h2>
-        <p class="section-content" data-aos="fade-up" data-aos-duration="1000">Somos una incubadora de proyectos tecnológicos que ayuda a los jóvenes a <b class="purple">hacer sus ideas realidad.</b></p>
+        <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">¿Quiénes somos?</h2>
+        <p class="section-content" data-aos="fade-up" data-aos-duration="1000">Somos una organización sin ánimo de lucro, creando un mejor <b class="purple">futuro</b> a partir de la <b class="purple">tecnología</b>.</p>
     </section>
     <figure class="first-separator" data-aos="fade-right" data-aos-duration="1000">
         <div class="separator-line"></div>
@@ -64,7 +64,7 @@
     </figure>
     <section id="purpose">
         <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">Nuestro propósito</h2>
-        <p class="section-content" data-aos="fade-up" data-aos-duration="1000">Turingbox surgió con la idea de motivar a <b class="purple">más personas</b> a incursionar en el mundo de la <b class="purple">tecnología.</b></p>
+        <p class="section-content" data-aos="fade-up" data-aos-duration="1000">Buscamos motivar a <b class="purple">más personas</b> a incursionar en el mundo de la <b class="purple">tecnología.</b></p>
         <p class="purple section-content separate" data-aos="fade-up" data-aos-duration="1000">Somos el lugar para <b>explorar</b> tus <b>intereses</b></p>
         <div class="interests"></div>
     </section>
@@ -80,8 +80,8 @@
         <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">¿Cómo lo hacemos?</h2>
         <div class="complete-carousel" data-aos="fade-up" data-aos-duration="1000">
             <div class="carousel">
-                <p class="section-content purple carousel-title">Acercamos a las personas a la tecnología</p>
-                <p class="section-content carousel-content gray">Por medio de charlas y eventos sobre el mundo de la tecnología y el crecimiento empresarial, donde cada invitado es seleccionado para fomentar el aprendizaje de los asistentes</p>
+                <p class="section-content purple carousel-title">Eventos</p>
+                <p class="section-content carousel-content gray">Creamos experiencias que motiven a las personas a aprender, a través de conferencias, talleres y charlas.</p>
             </div>
             <div class="carousel-controls">
                 <img src="assets/arrow.png" alt="" class="left-arrow">
@@ -96,10 +96,11 @@
         <img src="assets/div top desktop.png" alt="Separador 1" class="second-separator-top desktop">
         <img src="assets/div bottom desktop.png" alt="Separador 1" class="second-separator-bottom desktop">
         <img src="assets/div top.png" alt="Separador 1" class="second-separator-top mobile">
+        <img src="assets/invisible separator.png" alt="Separador 1" class="second-separator-top mobile hidden">
         <img src="assets/div bottom.png" alt="Separador 1" class="second-separator-bottom mobile">
     </figure>
     <footer>
-        <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">¿Qué esperas para hacer parte?</h2>
+        <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">¿Qué esperas para ser parte?</h2>
         <a href="https://forms.gle/aTsjyo1CLjm6Kbao6" class="footer-cta">Únete ahora</a>
         <div class="social-networks">
                 <img src="assets/linkedin.png" alt="linkedin" onclick="window.open('https://www.linkedin.com/company/turingbox/')">
@@ -108,6 +109,7 @@
                 <img src="assets/whatsapp.png" alt="whatsapp" onclick="window.open('https://chat.whatsapp.com/D9wyiwh2jz2FDD6NkeopCS')">
                 <img src="assets/tik-tok.png" alt="tik-tok" onclick="window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ')">
                 <img src="assets/twitter.png" alt="twitter" onclick="window.open('https://twitter.com/turingbox_')">
+                <p class="uwunt">De Colombia con ❤ para el mundo</p>
         </div>
     </footer>
     
